--- a/entities/groups/switches.yaml
+++ b/entities/groups/switches.yaml
@@ -7,6 +7,6 @@ all_light_switches:
   name: All Light Switches
   entities:
     - switch.office_switch_switch_1
-    - switch.garage_opener_socket_1
+    - switch.garage_opener_plug
     - switch.living_room_switch_switch_1
     - switch.bedroom_switch_switch_1
