--- a/ui_lovelace_minimalist/dashboard/views/rooms/garage.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/garage.yaml
@@ -48,7 +48,7 @@ cards:
 
   - type: "custom:button-card"
     template: card_light
-    entity: switch.garage_opener_socket_1
+    entity: switch.garage_opener_plug
     variables:
       ulm_card_light_name: Garage Door Power
 
@@ -147,6 +147,12 @@ cards:
     variables:
       - sensor_prefix: garage
       - node_number: 6
+
+  - type: custom:decluttering-card
+    template: z_wave_plug
+    variables:
+      - sensor_prefix: garage_opener
+      - node_number: 28
 
   - type: custom:decluttering-card
     template: leak_sensors
