--- a/ui_lovelace_minimalist/dashboard/views/rooms/attic.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/attic.yaml
@@ -7,6 +7,21 @@ cards:
       - sensor_prefix: attic
       - room_name: Attic
 
+  #################
+  # DEVICES
+  #################
+  - type: "custom:button-card"
+    template: card_title
+    label: Devices
+  - type: "custom:button-card"
+    template: card_light
+    entity: switch.water_softener_plug
+    variables:
+      ulm_card_light_name: Water Softener
+
+  #################
+  # SENSORS
+  #################
   - type: "custom:button-card"
     template: card_title
     label: Sensors
@@ -28,9 +43,18 @@ cards:
           ulm_card_graph_entity: sensor.air_conditioner_2_1min
           ulm_card_graph_name: Air Conditioner
 
+  #################
+  # DEVICE HEALTH
+  #################
   - type: "custom:button-card"
     template: card_title
     label: Device Health
+
+  - type: custom:decluttering-card
+    template: z_wave_plug
+    variables:
+      - sensor_prefix: water_softener
+      - node_number: 29
 
   - type: custom:decluttering-card
     template: leak_sensors
