--- a/ui_lovelace_minimalist/dashboard/views/mainviews/house.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/mainviews/house.yaml
@@ -6,6 +6,7 @@ layout:
     "nav title status ."
     "sensors climate covers alerts"
     "batteries schedules tracking ."
+    "poat-phone gina-phone . ."
   mediaquery:
     # portrait monitor
     "only screen and (min-width: 769px) and (max-width: 1400px)":
@@ -16,6 +17,7 @@ layout:
         "alerts covers"
         "batteries schedules"
         "tracking ."
+        "poat-phone gina-phone"
     # Smartphones
     "only screen and (max-width: 768px)":
       grid-template-areas: |
@@ -29,6 +31,8 @@ layout:
         "batteries"
         "schedules"
         "tracking"
+        "poat-phone"
+        "gina-phone"
 cards:
   - type: custom:button-card
     template: chip_back
@@ -324,3 +328,84 @@ cards:
           include:
             - attributes:
                 source_type: gps
+
+  #################
+  # PHONES
+  #################
+  - type: entities
+    title: Poat's iPhone
+    view_layout:
+      grid-area: poat-phone
+    entities:
+      - entity: sensor.poat_s_iphone_14_pro_max_activity
+        name: Activity
+      - entity: sensor.poat_s_iphone_14_pro_max_average_active_pace
+        name: Average Active Pace
+      - entity: sensor.poat_s_iphone_14_pro_max_battery_level
+        name: Battery Level
+      - entity: sensor.poat_s_iphone_14_pro_max_battery_state
+        name: Battery State
+      - entity: sensor.poat_s_iphone_14_pro_max_bssid
+        name: BSSID
+      - entity: sensor.poat_s_iphone_14_pro_max_connection_type
+        name: Connection Type
+      - entity: sensor.poat_s_iphone_14_pro_max_distance
+        name: Distance
+      - entity: binary_sensor.poat_s_iphone_14_pro_max_focus
+        name: Focus
+      - entity: sensor.poat_s_iphone_14_pro_max_geocoded_location
+        name: Geocoded Location
+      - entity: sensor.poat_s_iphone_14_pro_max_last_update_trigger
+        name: Last Update Trigger
+      - entity: sensor.poat_s_iphone_14_pro_max_location_permission
+        name: Location permission
+      - entity: sensor.poat_s_iphone_14_pro_max_ssid
+        name: SSID
+      - entity: sensor.poat_s_iphone_14_pro_max_steps
+        name: Steps
+      - entity: sensor.poat_s_iphone_14_pro_max_storage
+        name: Storage
+      - entity: sensor.poat_s_iphone_14_pro_max_watch_battery
+        name: Watch Battery
+      - entity: sensor.poat_s_iphone_14_pro_max_app_version
+        name: App Version
+      - device_tracker.poat_s_iphone_14_pro_max_2
+
+  - type: entities
+    title: Gina's iPhone
+    view_layout:
+      grid-area: gina-phone
+    entities:
+      - entity: sensor.gina_s_iphone_13_mini_activity
+        name: Activity
+      - entity: sensor.gina_s_iphone_13_mini_average_active_pace
+        name: Average Active Pace
+      - entity: sensor.gina_s_iphone_13_mini_battery_level
+        name: Battery Level
+      - entity: sensor.gina_s_iphone_13_mini_battery_state
+        name: Battery State
+      - entity: sensor.gina_s_iphone_13_mini_bssid
+        name: BSSID
+      - entity: sensor.gina_s_iphone_13_mini_connection_type
+        name: Connection Type
+      - entity: sensor.gina_s_iphone_13_mini_distance
+        name: Distance
+      - entity: binary_sensor.gina_s_iphone_13_mini_focus
+        name: Focus
+      - entity: sensor.gina_s_iphone_13_mini_geocoded_location
+        name: Geocoded Location
+      - entity: sensor.gina_s_iphone_13_mini_last_update_trigger
+        name: Last Update Trigger
+      - entity: sensor.gina_s_iphone_13_mini_location_permission
+        name: Location permission
+      - entity: sensor.gina_s_iphone_13_mini_ssid
+        name: SSID
+      - entity: sensor.gina_s_iphone_13_mini_steps
+        name: Steps
+      - entity: sensor.gina_s_iphone_13_mini_storage
+        name: Storage
+      - entity: sensor.gina_s_iphone_13_mini_watch_battery
+        name: Watch Battery
+      - entity: sensor.gina_s_iphone_13_mini_app_version
+        name: App Version
+      - device_tracker.gina_s_iphone_13_mini_2
